Created lab configuration file.
InputHandler class has transitioned away from reading a CSV.  It now
reads the lab config file which maps the lab common name to the TSSS
name.